Fixed overlapping problem

--- a/styles/default.css
+++ b/styles/default.css
@@ -76,6 +76,7 @@ iframe {
     right: 40px;
     top: 420px;
     width: 55%;
+    padding-bottom: 100px;
     text-align: center;
     border-radius: 2px;
     display: none;
